fixing formatting and wrapping on home screen

--- a/components/PageSpecific/Index/ProfileImage.module.scss
+++ b/components/PageSpecific/Index/ProfileImage.module.scss
@@ -8,21 +8,27 @@
     flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
+    margin: 0px 10px;
 
     img{
         max-width: 350px;
         border-radius: 50%;
         border-style: solid;
         border-color: $on-secondary;
-        margin: 20px;
+        margin: 40px 20px;
     }
 
     .ProfileTitle{
-        max-width: 600px;
+        max-width: 500px;
+
+        h2 {
+            color: $on-secondary-dark;
+        }
     }
 
     @media screen and (orientation:landscape) {
         flex-direction: row;
+        flex-wrap: nowrap;
         justify-content: space-between;
         align-items: center;
         .ProfileTitle{
